<resources>
    <string name="app_name">V-Guard Rishta</string>
    <string name="channel_id" translatable="false">Channel Id</string>
    <string name="channel_name" translatable="false">Channel name</string>
    <string name="please_wait">Please wait..</string>
    <string name="enter_username">Enter UserName</string>
    <string name="enter_password">Enter Password</string>
    <string name="invalidCredentials">Incorrect Username or password</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="points_redeemed">Points Redeemed</string>
    <string name="points_balance">Points Balance</string>
    <string name="profile">Profile</string>
    <string name="redemption_history">Redemption History</string>
    <string name="name">Name</string>
    <string name="enter_code">Enter coupon code manually below</string>
    <string name="error_barcode">Please scan or Enter barcode</string>
    <string name="invalid_barcode">Invalid Barcode</string>
    <string name="no_data">No Data</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="district">District</string>
    <string name="pincode">Pincode*</string>
    <string name="update">There is a new version available in the Play store, Please update.</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="submit">Submit</string>
    <string name="enter_otp">Enter One Time Password (OTP)</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobileNo">Enter Mobile No.</string>
    <string-array name="select_state">
        <item>Select State</item>
    </string-array>
    <string-array name="select_city">
        <item>Select City</item>
    </string-array>
    <string name="select_district">Select District</string>
    <string name="select">Select</string>
    <string name="enter_valid_pincode">Enter Valid Pincode</string>
    <string name="enter_valid_mobileNo">Enter Valid Mobile No.</string>
    <string name="send_otp">Send OTP</string>
    <string name="description">Description</string>
    <string name="city">City</string>
    <string name="ifsc">IFSC Code</string>
    <string name="pan_no">PAN No *</string>
    <string name="pan_no_nonman">PAN No</string>
    <string name="home_small_cap">Home</string>
    <string name="redeem_points">Redeem Points</string>
    <string name="bank_transfer">Instant Bank Transfer</string>
    <string name="bank_name">Bank Name</string>
    <string name="whatsapp_no">WhatsApp No.</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="enter_valid_mail">Enter Valid Mail</string>
    <string name="select_idcard_type">Select ID proof Type</string>
    <string name="select_action">Select Action</string>
    <string name="select_from_gallery">Select photo from gallery</string>
    <string name="capture_from_camera">Capture photo from camera</string>
    <string name="file">File</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="select_or_capture_chequebook">Capture ChequeBook Photo</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="age_below_18">Dob : 18 years age required</string>
    <string name="problem_occurred">Problem occurred while handling request</string>
    <string name="downloads_small">Downloads</string>
    <string name="no_category_found">No Category Found</string>
    <string name="view">View</string>
    <string name="no_activity_found">No Activity Found to open this File</string>
    <string name="all">All</string>
    <string-array name="account_type">
        <item>Type of Account</item>
        <item>Current</item>
        <item>Saving</item>
    </string-array>
    <string name="otp_not_received">OTP Not Received ?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="maximum_otp_count">Resend OTP count exceeded.</string>
    <string name="terms_and_conditions"> <u>Terms &amp; Conditions </u> </string>
    <string name="you_won">You Won</string>
    <string name="something_wrong">Something went wrong. Please contact support.</string>
    <string name="call_to_get_otp">GET OTP VIA CALL</string>
    <string name="please_accept_terms">Please accept terms and conditions.</string>
    <string name="lbl_new_user_registration">New User Registration</string>
    <string name="app_logo">App Logo</string>
    <string name="lbl_select_job_profession">1. Please select your \'Job Profession\'</string>
    <string name="influencer">Influencer</string>
    <string name="lbl_enter_mobile_number">2. Enter your mobile number to get OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="or">or</string>
    <string name="powered_by_v_guard">Powered by V-GUARD</string>
    <string name="lbl_otp_through_phone_call">Click Here to get OTP\nthrough phone call</string>
    <string name="call">call</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="lbl_otp_verification">OTP Verification</string>
    <string name="enter_otp_description">Please enter the 4-digit OTP\nreceived through SMS/IVR using\nmobile no. </string>
    <string name="new_user">New User</string>
    <string name="rishta_id">Rishta ID</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="user_image">User Image</string>
    <string name="arrow_down">Arrow Down</string>
    <string name="lbl_referral_code">Referral Code (if any)</string>
    <string name="lbl_name_of_referee">Name of Referee</string>
    <string name="lbl_name_mandatory">Name*</string>
    <string name="lbl_gender_mandatory">Gender*</string>
    <string name="lbl_date_of_birth_mandatory">Date of Birth DD/MM/YYYY*</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="lbl_contact_number_mandatory">Contact Number*</string>
    <string name="lbl_whats_app_number">WhatsApp Number</string>
    <string name="lbl_permanent_address_mandatory"><b>Permanent Address*</b> House/Flat/Block No.</string>
    <string name="lbl_delivery_address_mandatory"><b>Delivery Address*</b> House/Flat/Block No.</string>
    <string name="lbl_current_address_mandatory"><b>Current Address*</b> House/Flat/Block No.</string>
    <string name="lbl_street_locality">Street/Colony/Locality Name*</string>
    <string name="lbl_landmark">Landmark</string>
    <string name="lbl_city_mandatory">City*</string>
    <string name="lbl_pin_code_mandatory">Pin Code*</string>
    <string name="lbl_bank_details"><b>Bank Details</b> (for A/C transfer only)</string>
    <string name="lbl_account_number">Account Number</string>
    <string name="lbl_account_holder_name">Account Holder Name</string>
    <string name="lbl_account_holder">Account Holder</string>
    <string name="lbl_bank_name_and_branch">Bank Name &amp; Branch</string>
    <string name="lbl_ifsc_code">IFSC Code</string>
    <string name="lbl_upload_cancelled_cheque">Upload Passbook/Cancelled Cheque Copy</string>
    <string name="lbl_nominee_details"><b>Nominee Details</b> (for Insurance purpose)</string>
    <string name="lbl_name_of_nominee">Name of Nominee</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_address">Address</string>
    <string name="lbl_relationship_with_you">Relationship with you</string>
    <string name="lbl_accept_terms">I have read &amp; fully understood the <u> <b> terms and conditions </b> </u>  of V-Guard Rishta Loyalty Program and abide to follow them.</string>
    <string name="lbl_terms_and_conditions_ul">I agree to Terms And Conditions</string>
    <string name="preview">Preview</string>
    <string name="agree">Agree</string>
    <string name="edit">Edit</string>
    <string name="lbl_preferred_language">Preferred Language</string>
    <string name="lbl_state">State</string>
    <string name="lbl_type_of_account">Type of Account</string>
    <string name="start">Start</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_login_or_register">Login or register to continue</string>
    <string name="mobile_icon">Mobile Icon</string>
    <string name="lbl_registered_mobile_number_login">Registered Mobile No./Rishta ID</string>
    <string name="login_via_otp">Login via OTP</string>
    <string name="log_in">Log In</string>
    <string name="enter_registered_mobile_no_rishta_id">Please  enter your registered\nMobile No./Rishta ID</string>
    <string name="number_of_scans">Number Of Scans</string>
    <string name="scan_code">Scan Code</string>
    <string name="info_desk">Info Desk</string>
    <string name="welfare">Welfare</string>
    <string name="what_s_new">What\'s New</string>
    <string name="raise_ticket">Raise Ticket</string>
    <string name="scheem_offers">Scheme/Offers</string>
    <string name="click_here_to_scan_a_unique_code">Click here to scan a unique code</string>
    <string name="paytm_transfer">Paytm Transfer</string>
    <string name="e_gift_cards">Electronic Gift Voucher</string>
    <string name="update_kyc">Update KYC</string>
    <string name="update_pan">Update PAN</string>
    <string name="track_your_redemption">Track Your Redemption</string>
    <string name="redeem_products">Redeem Products</string>
    <string name="redeemed_points">Redeemed Points</string>
    <string name="one_point_one_inr">* 1 Point = 1 INR</string>
    <string name="one_point_one_inr_aircooler">* 1 star = 50 paisa</string>
    <string name="others">Others</string>
    <string name="home_smallcase">Home</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="points_earned">Points Earned</string>
    <string name="product_wise_earning">Product Wise Earning</string>
    <string name="scheme_wise_earning">Scheme Wise Earning</string>
    <string name="product_wise_offers">Product Wise Offers</string>
    <string name="v_guard_info">V-Guard Info</string>
    <string name="v_guard_product_catalog">V-Guard Product Catalogue</string>
    <string name="read_more">…Read More</string>
    <string name="select_job_profession">Please Select Job Profession</string>
    <string name="click_year_to_change">Click on year to select year</string>
    <string name="enter_preffered_lang">Please enter your preferred language.</string>
    <string name="help">Help</string>
    <string name="user">User</string>
    <string name="alerts">Alerts</string>
    <string name="need_help">Need Help?</string>
    <string name="evolve_help_center">\'Rishta\' Program Centre \n C/o Evolve Brands Pvt Ltd, \n Plot No. -249G \n AIHP Tower Wing-A \n Level-2, Udyog Vihar, \n Phase 4, Gurugram -122015 Harayana</string>
    <string name="ccare_vguards_com">info@vguardrishta.com</string>
    <string name="help_number">9717500011</string>
    <string name="help_number_whatsapp">9818900011</string>
    <string name="parts_description">Material Description</string>
    <string name="bonus_points">Bonus Points</string>
    <string name="created_date">Created Date</string>
    <string name="points">Points</string>
    <string name="sl_no">SL. No.</string>
    <string name="scheme_points">Scheme Points</string>
    <string name="scheme_name">Scheme Name</string>
    <string name="scheme_period">Scheme Period</string>
    <string name="in_">in</string>
    <string name="product_category">Product Category</string>
    <string name="red_date">Red Date</string>
    <string name="red_amt">Red Amt</string>
    <string name="tds_amt">TDS Amt</string>
    <string name="tds_perc">TDS %</string>
</resources>