<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_small_cap" />
    <item
        android:id="@+id/action_notification"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:title="@string/alerts" />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_users_"
        android:title="@string/user"
        />

    <item
        android:id="@+id/action_help"
        android:enabled="true"
        android:icon="@drawable/ic_phone_call"
        android:title="@string/help" />

    <item
        android:id="@+id/action_logout"
        android:enabled="true"
        android:icon="@drawable/ic_logout"
        android:title="@string/profile" />

</menu>