<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSlNo"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp_8"
            android:text="@string/sl_no"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCreatedDate"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp_8"
            android:text="@string/created_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPartDesc"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp_8"
            android:text="@string/parts_description"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCouponCode"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp_8"
            android:text="@string/coupon_code"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvSchemePoints"
            android:layout_width="@dimen/dp_200"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp_8"
            android:text="@string/scheme_points"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSchemeName"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp_8"
            android:text="@string/scheme_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSchemePeriod"
            android:layout_width="@dimen/dp_100"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp_8"
            android:text="@string/scheme_period"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/grey_400" />
</LinearLayout>

