<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/dp_2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/red_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRedAmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/red_amt"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvTdsAmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/tds_amt"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvTdsPerc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/tds_perc"
            android:textStyle="bold" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@color/grey"/>

</LinearLayout>