<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:orientation="vertical">

    <com.tfl.vguardrishta.ui.components.vguard.common.CustomToolbar
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetEnd="0dp"
        android:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSlNo"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dp_8"
                    android:text="@string/sl_no"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvProdCategory"
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dp_8"
                    android:visibility="gone"
                    android:text="@string/product_category"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPartDesc"
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dp_8"
                    android:text="@string/parts_description"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPoints"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dp_8"
                    android:text="@string/points"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBonusPoints"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dp_8"
                    android:text="@string/bonus_points"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCouponCode"
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dp_8"
                    android:text="@string/coupon_code"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvCreatedDate"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dp_8"
                    android:text="@string/created_date"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvProdWiseEarning"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:paddingBottom="100dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_prod_wise_earning"
                tools:spanCount="2" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tvNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_data"
        android:visibility="gone" />

</LinearLayout>