<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivRishtaLogo"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_120"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_16"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/group_599" />

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/dp_8"
        android:layout_marginVertical="@dimen/dp_32"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:text="@string/lbl_otp_verification"
        android:textColor="@color/custom_black" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/nunito"
        android:gravity="center"
        android:text="@string/enter_otp_description"
        android:textColor="@color/text"
        android:textSize="@dimen/sp_16" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_32"
        android:elevation="8dp"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="10dp">

        <LinearLayout
            android:id="@+id/llOtp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_10"
                android:contentDescription="@string/enter_otp"
                android:src="@drawable/correct_icon" />

            <EditText
                android:id="@+id/etOTP"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/dp_4"
                android:layout_weight="1"
                android:background="@color/white"
                android:fontFamily="@font/nunito"
                android:hint="@string/enter_otp"
                android:inputType="number"
                android:maxLength="6"
                android:padding="@dimen/dp_6"
                android:singleLine="true"
                android:textSize="@dimen/sp_16"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_32"
        android:elevation="8dp"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="10dp">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center"
            android:background="@drawable/transparent_ripple"
            android:drawableEnd="@drawable/arrow"
            android:drawablePadding="-24dp"
            android:elevation="@dimen/dp_10"
            android:fontFamily="@font/nunito_extrabold"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:translationZ="@dimen/dp_6" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/otp_not_received"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tvResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:alpha="0.4"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/resend_otp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvCallToGetOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:alpha="0.4"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/call_to_get_otp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_"
            android:textSize="@dimen/sp_14" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="0dp"
            android:background="@color/grey_400"
            android:gravity="bottom|center"
            android:paddingVertical="@dimen/dp_12"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/powered_by_v_guard"
                android:src="@drawable/group_912" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>