<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp_48"
    android:layout_marginTop="@dimen/dp_16"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/need_help"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/evolve_help_center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_24"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:padding="@dimen/dp_4"
            android:src="@drawable/ic_phone_call_2" />

        <TextView
            android:id="@+id/tvContactNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/help_number"
            android:textColor="@color/black" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:padding="@dimen/dp_4"
            android:src="@drawable/ic_email" />

        <TextView
            android:id="@+id/tvSupportMail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/ccare_vguards_com"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="@dimen/dp_32"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:padding="@dimen/dp_4"
            android:src="@drawable/ic_whatsapp" />

        <TextView
            android:id="@+id/tvWhatsappNo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:text="@string/help_number_whatsapp" />


    </LinearLayout>

</LinearLayout>